--- a/_notes/MIS5100.md
+++ b/_notes/MIS5100.md
@@ -6,7 +6,7 @@ date: 2022-03-31
 tags: SEBTS missions course
 
 ---
-*The following resources are for my in-class instruction. *
+*The following resources are for my in-class instruction.*
 
 # Critical Contextualization
 The first modules of our hybrid weekend deal with the topic of contextualization. Contextualization is a common term used in Christian ministry today, but what does it mean and how do we do it well? 
@@ -16,18 +16,24 @@ The first modules of our hybrid weekend deal with the topic of contextualization
 For these lectures, we're going to look at [[Hiebert on Contextualization]] to set the basis for our discussion. *You can click on the link above to find copies of several articles by Hiebert that will frame our contextualization discussion.*
 
 ## Worldview Analysis Case Study
-**Assignment:** Break students into groups and provide each group with materials that present a case study for a particular worldview.
+**Assignment:** Break students into groups and provide each group with materials that present a case study for a particular worldview. Students will analyze the materials in order to exegete the culture and assess the worldview represented by the materials. Next students will consider ways to contextualize the gospel message that are both faithful to Scripture and understandable to an adherent of the represented worldview. 
 
-### Hinduism
+After developing an assessment and potential message of engagement, students will then present their findings to the class.
+
+
+### Representative Wordlview Case Studies
+*Students will do well to note while these fall into classical categories of world religions, that does not mean they can assume any basic pieces of the worldview based on their understanding of a textbook definition of these world religions.*
+
+#### Hinduism
 * [Manifesto for a liberal Hindu - The Times of India](https://timesofindia.indiatimes.com/blogs/bloody-mary/manifesto-for-a-liberal-hindu-its-time-for-secular-hindus-to-say-garv-se-kaho-hum-liberal-hain/)
 * [The Hindutva Manifesto](https://swarajyamag.com/magazine/the-hindutva-manifesto)
 
-### Islam
+#### Islam
 * [THE MUSLIM MANIFESTO - a strategy for survival](https://www.icit-digital.org/articles/the-muslim-manifesto-a-strategy-for-survival)
 * [Muslim Democrats of the World, Unite!](https://www.huffpost.com/entry/muslim-democrats-unite_b_6648898)
 [Opinion: Manifesto for a modern Islam](https://www.dw.com/en/opinion-manifesto-for-a-modern-islam/a-18272979)
     * This is a follow-up commentary on the above article.*
 
-### Secular Humanist/ Techno-optimist
+#### Secular Humanist/ Techno-optimist
 * [Trade-free](https://www.trade-free.org/)
 * ![38. The Origin of Most Problems.pdf](../assets/38._The_Origin_of_Most_Problems_1648144395538_0.pdf)
