updating link to crazy TROM manifesto

--- a/_notes/MIS5100.md
+++ b/_notes/MIS5100.md
@@ -36,4 +36,4 @@ After developing an assessment and potential message of engagement, students wil
 
 #### Secular Humanist/ Techno-optimist
 * [Trade-free](https://www.trade-free.org/)
-* ![38. The Origin of Most Problems.pdf](../assets/38._The_Origin_of_Most_Problems_1648144395538_0.pdf)
+* [The Origin of Most Problems.pdf](https://www.tromsite.com/books/#flipbook-df_6562/1)
