--- a/_notes/MIS5100.md
+++ b/_notes/MIS5100.md
@@ -31,7 +31,7 @@ After developing an assessment and potential message of engagement, students wil
 #### Islam
 * [THE MUSLIM MANIFESTO - a strategy for survival](https://www.icit-digital.org/articles/the-muslim-manifesto-a-strategy-for-survival)
 * [Muslim Democrats of the World, Unite!](https://www.huffpost.com/entry/muslim-democrats-unite_b_6648898)
-[Opinion: Manifesto for a modern Islam](https://www.dw.com/en/opinion-manifesto-for-a-modern-islam/a-18272979)  
+* [Opinion: Manifesto for a modern Islam](https://www.dw.com/en/opinion-manifesto-for-a-modern-islam/a-18272979)  
     * *This is a follow-up commentary on the above article.*
 
 #### Secular Humanist/ Techno-optimist
