adding CMT to MIS5100

--- a/_notes/MIS5100.md
+++ b/_notes/MIS5100.md
@@ -37,3 +37,18 @@ After developing an assessment and potential message of engagement, students wil
 #### Secular Humanist/ Techno-optimist
 * [Trade-free](https://www.trade-free.org/)
 * [The Origin of Most Problems.pdf](https://www.tromsite.com/books/#flipbook-df_6562/1)
+
+
+## Developing Missions Method
+Biblical, theological, and historical bases for missions are essential for healthy missionary practice. However, we must still build the house. Once a foundation is laid, true obedience to the Great Commission requires developing specific missions methods to engage those outside the church in our disciple-making mission. 
+
+*How does one turn a corner from understanding the bases for missions and developing their own methods in context?*
+
+### The Core Missionary Task
+The International Mission Board has developed a framework called the [[Core Missionary Task]] which they use with all field personnel. This framework is helpful for developing healthy missions methods in a variety of contexts, not just in international missions and church planting. 
+
+It is important to note the difference between a framework and a method. Frameworks are scaffolding that allow us to maintain fidelity to the task given by Scripture but facilitate the development of specific methods that are context-bound.
+
+**Resource:** [Foundations](https://www.imb.org/wp-content/uploads/2022/02/Downloadable-IMB-Foundations-Magazine-2022-V3.pdf)
+*You can download the entire Foundations manual from the IMB to see a complete understanding of their biblical and theological foundations as well as a thorough explanation of the core missionary task.*
+
