adding later sections to MIS5100

--- a/_notes/MIS5100.md
+++ b/_notes/MIS5100.md
@@ -52,3 +52,10 @@ It is important to note the difference between a framework and a method. Framewo
 **Resource:** [Foundations](https://www.imb.org/wp-content/uploads/2022/02/Downloadable-IMB-Foundations-Magazine-2022-V3.pdf)
 *You can download the entire Foundations manual from the IMB to see a complete understanding of their biblical and theological foundations as well as a thorough explanation of the core missionary task.*
 
+### Current Topics in Christian Missions
+While there are many current topics in missions, the following are especially pertinant to our current missionary context in North America, thought they are also major issues globally.
+
+At the end of day two, we can plan to discuss the following topics:
+* **Diaspora Missions:** The question of how we engage in cross-cultural missions in the face of unprecendeted global migration may be the most pressing issue in global missions today. While this is a global issue, it is especially sensitive in the United States, since we are the largest recipient of international migration in the world.
+* **Developing Sending Culture:** Increasingly, our current paradigms concerning mobilization of missionaries, church planters, replanters, and revitalizers are being seen as inadequate. How do we recast this essential task of calling out the called for the sake of the Great Commission within the local church?
+
