fixed first margin note

--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -6,7 +6,7 @@ date: 2022-07-07
 tags: SEBTS missions course
 
 ---
-*The following resources are for my in-class instruction.*
+[[*The following resources are for my in-class instruction.*::rmn]]
 # Personal Reflection on Calling and the Great Commission
 Our first modules will review your two prior assignments concerning personal reflection and the Great Commission. Students will 
 
