fixing more of the mis5000 page

--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -11,14 +11,14 @@ tags: SEBTS missions course
 Our first modules will review your two prior assignments concerning personal reflection and the Great Commission. Students will 
 
 ## Personal Testimony
-[[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning Friday.*::rmn]]
-**Assignment:** Students will prepare a two (2) page double spaced personal testimony paper. Specific guidelines for the paper must be followed and will be addressed in the course lectures. Points will be deducted if it is not followed. A specific guide will be available for download on the CampusNet page.
+[[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning of Friday.*::rmn]]
+**Assignment 1:** Students will prepare a two (2) page double spaced personal testimony paper. Specific guidelines for the paper must be followed and will be addressed in the course lectures. Points will be deducted if it is not followed. A specific guide will be available for download on the CampusNet page.
 
 During the hyrbid weekend, students will use their preparation for this paper to conversationally discuss their testimony with one another in small groups during the first module of the weekend. The goal of this assignment is to help students consider their own story in a manner that is conducive to sharing it as part of evangelism. Conversing with one another about it will develop familiarity with speaking about it in this way. Finally, this gives everyone a chance to know other classmates in a more personal way. 
 
 ## Personal Reflection
 [[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning Friday.*::rmn]]
-**Assignment:** Students are to write a two (2) page, double-spaced paper responding to the following questions:
+**Assignment 2:** Students are to write a two (2) page, double-spaced paper responding to the following questions:
 - “What is my current understanding of the biblical/theological basis for missions?” Provide specific Scripture passages from both the Old and New Testament to ground your theology.
 - “What is the present status of my life’s practice when it comes to sharing the gospel with individuals?”
 - “Which of the barriers mentioned in class is the greatest hindrance to personal missions and evangelism in the lives of those I know?”
@@ -29,12 +29,12 @@ In addition to sharing their testimony, students will use the *last two question
 # Critical Contextualization
 The second module of our hybrid weekend deal with the topic of contextualization. Contextualization is a common term used in Christian ministry today, but what does it mean and how do we do it well? 
 
-[[Contextualization on the Mission Field]] is an important topic, whether your field is across the ocean or across the street.
+[[Contextualization on the Mission Field]] is an important topic, whether your field is across the ocean or across the street. For these lectures, we're going to look at [[Hiebert on Contextualization]] to set the basis for our discussion. [[*You can click on the link above to find copies of several articles by Hiebert that will frame our contextualization discussion.*::rmn]]
 
-For these lectures, we're going to look at [[Hiebert on Contextualization]] to set the basis for our discussion. [[*You can click on the link above to find copies of several articles by Hiebert that will frame our contextualization discussion.*::rmn]]
+**Assignment 3:** Students are required to read the article "Critical Contextualization" by Hiebert prior to coming to class. [You can access the article here.](https://commonplace.ml/assets/files/hiebert87.pdf) You will need to have this finished prior to the discussion. It is a short article, but it covers some pretty complex topics. A first read before the discussion is essential.
 
 ## Worldview Analysis Case Study
-**Assignment:** Break students into groups and provide each group with materials that present a case study for a particular worldview. Students will analyze the materials in order to exegete the culture and assess the worldview represented by the materials. Next students will consider ways to contextualize the gospel message that are both faithful to Scripture and understandable to an adherent of the represented worldview. 
+Break students into groups and provide each group with materials that present a case study for a particular worldview. Students will analyze the materials in order to exegete the culture and assess the worldview represented by the materials. Next students will consider ways to contextualize the gospel message that are both faithful to Scripture and understandable to an adherent of the represented worldview. 
 
 After developing an assessment and potential message of engagement, students will then present their findings to the class.
 
