--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -8,7 +8,7 @@ tags: SEBTS missions course
 ---
 [[*The following resources are for my in-class instruction.*::rmn]]
 # Personal Reflection on Calling and the Great Commission
-Our first modules will review your two prior assignments concerning personal reflection and the Great Commission. Students will 
+Our first modules will review your two prior assignments concerning personal reflection and the Great Commission.
 
 ## Personal Testimony
 [[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning of Friday.*::rmn]]
