--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -12,9 +12,9 @@ Our first modules will review your two prior assignments concerning personal ref
 
 ## Personal Testimony
 [[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning of Friday.*::rmn]]
-**Assignment 1:** Students will prepare a two (2) page double spaced personal testimony paper. Specific guidelines for the paper must be followed and will be addressed in the course lectures. Points will be deducted if it is not followed. A specific guide will be available for download on the CampusNet page.
+**Assignment 1:** Students will prepare a two (2) page, double-spaced personal testimony paper. Specific guidelines for the paper must be followed and will be addressed in the course lectures. Points will be deducted if it is not followed. A specific guide will be available for download on the CampusNet page.
 
-During the hyrbid weekend, students will use their preparation for this paper to conversationally discuss their testimony with one another in small groups during the first module of the weekend. The goal of this assignment is to help students consider their own story in a manner that is conducive to sharing it as part of evangelism. Conversing with one another about it will develop familiarity with speaking about it in this way. Finally, this gives everyone a chance to know other classmates in a more personal way. 
+During the hyrbid weekend, students will use their preparation for this paper to conversationally discuss their testimony with one another in small groups during the first module of the weekend. The goal of this assignment is to help students consider their own story in a manner that is conducive to sharing it as part of evangelism. Conversing with one another about it will develop familiarity with speaking in this way. Finally, this gives everyone a chance to know other classmates in a more personal way. 
 
 ## Personal Reflection
 [[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning Friday.*::rmn]]
@@ -72,7 +72,7 @@ It is important to note the difference between a framework and a method. Framewo
 [[*You can download the entire Foundations manual from the IMB to see a complete understanding of their biblical and theological foundations as well as a thorough explanation of the core missionary task.*::rmn]]
 
 ### Current Topics in Christian Missions
-While there are many current topics in missions, the following are especially pertinant to our current missionary context in North America, thought they are also major issues globally.
+While there are many current topics in missions, the following are especially pertinant to our current missionary context in North America, though they are also major issues globally.
 
 At the end of day two, we can plan to discuss the following topics:
 * **Diaspora Missions:** The question of how we engage in cross-cultural missions in the face of unprecendeted global migration may be the most pressing issue in global missions today. While this is a global issue, it is especially sensitive in the United States, since we are the largest recipient of international migration in the world.
