--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -17,7 +17,7 @@ Our first modules will review your two prior assignments concerning personal ref
 During the hyrbid weekend, students will use their preparation for this paper to conversationally discuss their testimony with one another in small groups during the first module of the weekend. The goal of this assignment is to help students consider their own story in a manner that is conducive to sharing it as part of evangelism. Conversing with one another about it will develop familiarity with speaking in this way. Finally, this gives everyone a chance to know other classmates in a more personal way. 
 
 ## Personal Reflection
-[[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning Friday.*::rmn]]
+[[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning of Friday.*::rmn]]
 **Assignment 2:** Students are to write a two (2) page, double-spaced paper responding to the following questions:
 - “What is my current understanding of the biblical/theological basis for missions?” Provide specific Scripture passages from both the Old and New Testament to ground your theology.
 - “What is the present status of my life’s practice when it comes to sharing the gospel with individuals?”
