--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -3,35 +3,38 @@ title: Introduction to Great Commission Studies (MIS5000)
 season: spring 
 author: Keelan 
 date: 2022-07-07 
+updated: 2023-06-17
 tags: SEBTS missions course
 
 ---
 [[*The following resources are for my in-class instruction.*::rmn]]
 # Personal Reflection on Calling and the Great Commission
-Our first modules will review your two prior assignments concerning personal reflection and the Great Commission.
+Our first modules will review your prior assignment concerning personal reflection and the Great Commission.
 
-## Personal Testimony
+## Personal Testimony & Assessment
 [[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning of Friday.*::rmn]]
-**Assignment 1:** Students will prepare a two (2) page, double-spaced personal testimony paper. Specific guidelines for the paper must be followed and will be addressed in the course lectures. Points will be deducted if it is not followed. A specific guide will be available for download on the CampusNet page.
 
-During the hyrbid weekend, students will use their preparation for this paper to conversationally discuss their testimony with one another in small groups during the first module of the weekend. The goal of this assignment is to help students consider their own story in a manner that is conducive to sharing it as part of evangelism. Conversing with one another about it will develop familiarity with speaking in this way. Finally, this gives everyone a chance to know other classmates in a more personal way. 
+Personal Assessment & Testimony: Students will prepare a two (2) page document that includes a one-page personal assessment of evangelistic disciplines and a one-page personal testimony structured for evangelism. Specific guidelines for the paper must be followed. Points will be deducted if it is not followed. A specific guide will be available for download on the CampusNet page. This is an introspective assignment and can be written in first person. 
 
-## Personal Reflection
-[[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning of Friday.*::rmn]]
-**Assignment 2:** Students are to write a two (2) page, double-spaced paper responding to the following questions:
+**Portion 1:** The first page of this assignment will answer the following questions in essay format. Do not simply provide one or two-word answers. Give a 2-3 sentence explanation for each question.
 - “What is my current understanding of the biblical/theological basis for missions?” Provide specific Scripture passages from both the Old and New Testament to ground your theology.
 - “What is the present status of my life’s practice when it comes to sharing the gospel with individuals?”
 - “Which of the barriers mentioned in class is the greatest hindrance to personal missions and evangelism in the lives of those I know?”
 - “Which of the barriers mentioned in class is my greatest hindrance to personal evangelism and why?”
 
-In addition to sharing their testimony, students will use the *last two questions* from the above prompts in a group setting to dialogue about their own obstacles to personal evangelism. Students are also free to share any personal suggestions about specific ways that have overcome these obstacles.
+During the hybrid weekend, students will use the *last two questions* from the above prompts in a group setting to dialogue about their own obstacles to personal evangelism. Students are also free to share any personal suggestions about specific ways that have overcome these obstacles.
+
+
+**Portion 2:** Students will use the second page of this assignment to construct a version of their personal testimony to use evangelistically. This needs to be short, clear, and relatable. A specific outline is provided in the required documents for the course that uses the acronym R.E.A.C.H. to structure the student’s testimony. Students must use this outline, or points will be deducted. 
+
+During the hyrbid weekend, students will use their preparation for this paper to conversationally discuss their testimony with one another in small groups during the first module of the weekend. The goal of this assignment is to help students consider their own story in a manner that is conducive to sharing it as part of evangelism. Conversing with one another about it will develop familiarity with speaking in this way. Finally, this gives everyone a chance to know other classmates in a more personal way. 
 
 # Critical Contextualization
-The second module of our hybrid weekend deal with the topic of contextualization. Contextualization is a common term used in Christian ministry today, but what does it mean and how do we do it well? 
+The second module of our hybrid weekend deals with the topic of contextualization. Contextualization is a common term used in Christian ministry today, but what does it mean and how do we do it well? 
 
 [[Contextualization on the Mission Field]] is an important topic, whether your field is across the ocean or across the street. For these lectures, we're going to look at [[Hiebert on Contextualization]] to set the basis for our discussion. [[*You can click on the link above to find copies of several articles by Hiebert that will frame our contextualization discussion.*::rmn]]
 
-**Assignment 3:** Students are required to read the article "Critical Contextualization" by Hiebert prior to coming to class. [You can access the article here.](https://commonplace.ml/assets/files/hiebert87.pdf) You will need to have this finished prior to the discussion. It is a short article, but it covers some pretty complex topics. A first read before the discussion is essential.
+**Assignment 3:** Students are required to read the article "Critical Contextualization" by Hiebert prior to coming to class. [You can access the article here.](https://keelan.wiki/assets/files/hiebert87.pdf) You will need to have this finished prior to the discussion. It is a short article, but it covers some pretty complex topics. A first read before the discussion is essential. Students are encouraged to take notes.
 
 ## Worldview Analysis Case Study
 Break students into groups and provide each group with materials that present a case study for a particular worldview. Students will analyze the materials in order to exegete the culture and assess the worldview represented by the materials. Next students will consider ways to contextualize the gospel message that are both faithful to Scripture and understandable to an adherent of the represented worldview. 
