Update Foundations link

--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -71,7 +71,7 @@ The International Mission Board has developed a framework called the [[Core Miss
 
 It is important to note the difference between a framework and a method. Frameworks are scaffolding that allow us to maintain fidelity to the task given by Scripture but facilitate the development of specific methods that are context-bound.
 
-**Resource:** [Foundations](https://www.imb.org/wp-content/uploads/2022/02/Downloadable-IMB-Foundations-Magazine-2022-V3.pdf)
+**Resource:** [Foundations](https://cook.noho.st/nextcloud/s/ccFfLbqHqqDQFLj)
 [[*You can download the entire Foundations manual from the IMB to see a complete understanding of their biblical and theological foundations as well as a thorough explanation of the core missionary task.*::rmn]]
 
 ### Current Topics in Christian Missions
