--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -11,6 +11,11 @@ tags: SEBTS missions course
 # Personal Reflection on Calling and the Great Commission
 Our first modules will review your prior assignment concerning personal reflection and the Great Commission.
 
+## IMB Seminary Student Self-Assessment
+The IMB provides this self-assessment specifically for seminary students. If you are considering missionary service, this assessment can begin an initial conversation with the IMB's assessment team. However, if you're unsure of your ministry calling, this assessment is also beneficial for personal discovery. Simply leave the box unchecked to send the results to the IMB.
+
+###[Seminary Student Self-Assessment](https://www.cognitoforms.com/IMB6/seminarystudentselfassessment)
+
 ## Personal Testimony & Assessment
 [[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning of Friday.*::rmn]]
 
