Testing callout markdown

--- a/_notes/MIS5000.md
+++ b/_notes/MIS5000.md
@@ -14,7 +14,8 @@ Our first modules will review your prior assignment concerning personal reflecti
 ## IMB Seminary Student Self-Assessment
 The IMB provides this self-assessment specifically for seminary students. If you are considering missionary service, this assessment can begin an initial conversation with the IMB's assessment team. However, if you're unsure of your ministry calling, this assessment is also beneficial for personal discovery. Simply leave the box unchecked to send the results to the IMB.
 
-### [Seminary Student Self-Assessment](https://www.cognitoforms.com/IMB6/seminarystudentselfassessment)
+> [!note]
+>[Seminary Student Self-Assessment](https://www.cognitoforms.com/IMB6/seminarystudentselfassessment)
 
 ## Personal Testimony & Assessment
 [[*This paper must be prepared in advance of the hybrid weekend and submitted to the professor by the beginning of Friday.*::rmn]]
